# rgb2yuv

./: .gitignore  CMakeLists.txt  PLAN.md  PROMPTS.md  PROTOCOL.md  README.md
include/: rgb2yuv.h
src/: main.c  rgb2yuv.c
tests/: bench_rgb2yuv.c  gen_reference.sh  test_rgb2yuv.c
